# Individual-Project

./: .gitignore  AGENTS.md  All the best sita chan.jpeg.import  LICENSE.md  clean_audio_metadata.py  export_presets.cfg  generate_asset_image.py  project.godot  readme.md  remove_comments.py  translate_gda1.py
.claude/: settings.local.json
.github/workflows/: build_game.yml  codeql.yml  run-tests.yml
1.Codebase/: .gitattributes  default_bus_layout.tres  main.gd  main.gd.uid  main.tscn  menu_main.tscn  player.tscn
1.Codebase/.claude/: launch.json  settings.local.json
1.Codebase/Unit Test/: all_tests_runner.gd  all_tests_runner.gd.uid  prompt_tests_runner.gd  prompt_tests_runner.gd.uid  quick_verify.gd  quick_verify.gd.uid  test_achievement_system.gd  test_achievement_system.gd.uid  test_ai_context_compression.gd  test_ai_context_compression.gd.uid  test_ai_log_details.gd  test_ai_log_details.gd.uid  test_ai_prompt_builder.gd  test_ai_prompt_builder.gd.uid  test_ai_providers.gd  test_ai_providers.gd.uid  test_ai_system.gd  test_ai_system.gd.uid  test_asset_interaction_system.gd  (+100 more)
1.Codebase/mcp/: README.md  connection.py  pyproject.toml  server.py  tools.py
2.Report/: .gitignore  AI_Output_Control_Explained.md  Duncan Law Interim Feedback.txt  Final_Report.md  Final_Report.tex  Final_Report_13000_words.txt  Final_Report_current.txt  US_logo-1.png.import  ai_usage_2026-04-02_04-12-03.csv  build.py  gdd game design doc.txt  intro_story_outline.txt  level testing.md  r  references.bib
4.Pre-Built V1.0/: README.md
cloudflare-worker/: gemini-proxy.js  wrangler.toml
(+906 files in other folders)
